Add plotting of losses

--- a/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.2.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.2.ipynb
@@ -169,6 +169,17 @@
    "execution_count": 6
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Prepare directory for saving model state dict, parameters, loss, etc.\n",
+    "model_state_dict_filepath = \"/home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/model_1_notebook_v6.2\""
+   ],
+   "id": "d710fbee997d980a"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-07-25T16:04:52.684142Z",
@@ -179,13 +190,20 @@
    "source": [
     "from timeit import default_timer as timer\n",
     "from transformer_decoder_training.training import training_1\n",
+    "from data_visualization.Visualization import plot_losses\n",
+    "\n",
+    "# Initialize lists to store loss values\n",
+    "train_losses = []\n",
+    "val_losses = []\n",
     "\n",
     "for epoch in range(1, num_epochs+1):\n",
     "    start_time = timer()\n",
     "    train_loss = training_1.train_loop(model, optimizer, loss_fn, train_loader, pad_token, device)\n",
     "    end_time = timer()\n",
     "    val_loss = training_1.validation_loop(model, loss_fn, val_loader, pad_token, device)\n",
-    "    print((f\"Epoch: {epoch}, Train loss: {train_loss:.3f}, Val loss: {val_loss:.3f}, \"f\"Epoch time = {(end_time - start_time):.3f}s\"))"
+    "    print((f\"Epoch: {epoch}, Train loss: {train_loss:.3f}, Val loss: {val_loss:.3f}, \"f\"Epoch time = {(end_time - start_time):.3f}s\"))\n",
+    "    \n",
+    "    plot_losses(train_losses, val_losses, model_state_dict_filepath + \"loss_plot.png\")"
    ],
    "id": "7633cba1a227de58",
    "outputs": [
@@ -229,8 +247,6 @@
    "source": [
     "import json\n",
     "\n",
-    "model_state_dict_filepath = \"/home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/model_1_notebook_v6.2\"\n",
-    "\n",
     "torch.save(model.state_dict(), model_state_dict_filepath + \".pth\")\n",
     "# save the parameters\n",
     "model_params = {\n",
@@ -243,6 +259,14 @@
     "        \"num_epochs\": num_epochs,\n",
     "        \"optimizer\": optimizer.__class__.__name__,\n",
     "        \"loss_fn\": loss_fn.__class__.__name__\n",
+    "    },\n",
+    "    \"training_data_params\": {\n",
+    "        \"sos_token\": sos_token,\n",
+    "        \"pad_token\": pad_token,\n",
+    "        \"snapshot_intervall\": snapshot_intervall,\n",
+    "        \"batch_size\": batch_size,\n",
+    "        \"sequence_length\": seq_length,\n",
+    "        \"stride\": stride\n",
     "    }\n",
     "}\n",
     "\n",
