Add model topology to json

--- a/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.2.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.2.ipynb
@@ -590,6 +590,7 @@
     "torch.save(model.state_dict(), model_state_dict_filepath + \".pth\")\n",
     "# save the parameters\n",
     "model_params = {\n",
+    "    \"model_topology\": str(model),\n",
     "    \"num_emb\": num_emb,\n",
     "    \"hidden_size\": hidden_size,\n",
     "    \"num_layers\": num_layers,\n",
