--- a/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.3.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.3.ipynb
@@ -560,8 +560,8 @@
     "torch.save(model.state_dict(), model_state_dict_filepath + \".pth\")\n",
     "# save the parameters\n",
     "model_params = {\n",
+    "    \"model_topology\": str(model),\n",
     "    \"num_emb\": num_emb,\n",
-    "    \"num_output_dim\": num_output_dim,\n",
     "    \"hidden_size\": hidden_size,\n",
     "    \"num_layers\": num_layers,\n",
     "    \"num_heads\": num_heads,\n",
