--- a/transformer_decoder_training/jupyter_notebooks/piano_training/v6/sequence_prediction_v6.2.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/piano_training/v6/sequence_prediction_v6.2.ipynb
@@ -212,7 +212,7 @@
     "    train_losses.append(train_loss)\n",
     "    val_losses.append(val_loss)\n",
     "    \n",
-    "    plot_losses(train_losses, val_losses, model_state_dict_filepath + \"loss_plot.png\")"
+    "    plot_losses(train_losses, val_losses, model_state_dict_filepath + \"_loss_plot.png\")"
    ],
    "id": "7633cba1a227de58",
    "outputs": [
